--- a/index.html
+++ b/index.html
@@ -1,40 +1,107 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <title>Your Name</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Página Animada — Ejemplo Mejorado</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="grid-2">
-        <div class="section-1">
-            <i class="fas fa-code fa-5x white"></i>
-            <h2>FirstName LastName</h2>
-            <p>City,Country.</p>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
-        </div>
-        <div class="section-2">
-            <h2>About</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quas sint et nihil iusto eius nostrum sit error, repellat optio quisquam! Magnam dolore iusto cumque. Nostrum error iste neque maiores.</p>
-            <h2>Experience</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem.</p>
-
-            <h2>Skills</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem obcaecati excepturi! Cupiditate eaque itaque magni voluptatibus neque nobis est dolor? Atque sunt minus ipsa asperiores. At.</p>
-            <h2>Projects</h2>
-            <a href="#">Project 1</a>
-            <a href="#">Project 2</a>
-            <a href="#">Project 3</a>
-            <a href="#">Project 4</a>
-            <a href="#">Project 5</a>
-            <h2>Contact</h2>
-            <p>myEmail@email.com</p>
-        </div>
+  <header class="site-header">
+    <div class="container header-inner">
+      <a class="logo" href="#">MiPágina</a>
+      <nav class="nav" id="nav">
+        <a href="#features">Características</a>
+        <a href="#projects">Proyectos</a>
+        <a href="#contact">Contacto</a>
+      </nav>
+      <button id="menuToggle" class="menu-toggle" aria-expanded="false" aria-controls="nav">☰</button>
     </div>
+  </header>
+
+  <main>
+    <section class="hero">
+      <div class="container hero-inner">
+        <h1 class="hero-title">Diseños limpios. Animaciones sutiles.</h1>
+        <p class="hero-sub">Una página ejemplo mejorada con transiciones, reveal al hacer scroll y microinteracciones.</p>
+        <div class="hero-cta">
+          <a class="btn primary" href="#projects">Ver proyectos</a>
+          <a class="btn ghost" href="#contact">Contáctame</a>
+        </div>
+      </div>
+      <div class="hero-decor" aria-hidden="true"></div>
+    </section>
+
+    <section id="features" class="features container">
+      <h2 class="section-title">Características</h2>
+      <div class="grid">
+        <article class="card reveal">
+          <h3>Animaciones CSS</h3>
+          <p>Transiciones y keyframes para mejorar la experiencia sin distraer.</p>
+        </article>
+        <article class="card reveal">
+          <h3>Reveal al hacer scroll</h3>
+          <p>Los elementos aparecen suavemente cuando entran en el viewport.</p>
+        </article>
+        <article class="card reveal">
+          <h3>Interacción accesible</h3>
+          <p>Respeta preferencia por reducir movimiento y tiene enfoque visible.</p>
+        </article>
+      </div>
+    </section>
+
+    <section id="projects" class="projects container">
+      <h2 class="section-title">Proyectos</h2>
+      <div class="projects-grid">
+        <div class="project-card reveal">
+          <div class="thumb" style="background-image:url('https://picsum.photos/seed/p1/600/400')"></div>
+          <h4>Proyecto A</h4>
+          <p>Una tarjeta con hover animado y sombreado.</p>
+          <a class="btn small" href="#">Ver</a>
+        </div>
+        <div class="project-card reveal">
+          <div class="thumb" style="background-image:url('https://picsum.photos/seed/p2/600/400')"></div>
+          <h4>Proyecto B</h4>
+          <p>Animaciones sutiles y accesibles.</p>
+          <a class="btn small" href="#">Ver</a>
+        </div>
+        <div class="project-card reveal">
+          <div class="thumb" style="background-image:url('https://picsum.photos/seed/p3/600/400')"></div>
+          <h4>Proyecto C</h4>
+          <p>Soporta dispositivos móviles y escritorio.</p>
+          <a class="btn small" href="#">Ver</a>
+        </div>
+      </div>
+    </section>
+
+    <section id="contact" class="contact container reveal">
+      <h2 class="section-title">Contacto</h2>
+      <form class="contact-form" action="#" onsubmit="return false;">
+        <label>
+          Nombre
+          <input type="text" name="name" required>
+        </label>
+        <label>
+          Email
+          <input type="email" name="email" required>
+        </label>
+        <label>
+          Mensaje
+          <textarea name="message" rows="4" required></textarea>
+        </label>
+        <div class="form-actions">
+          <button class="btn primary" type="submit">Enviar</button>
+        </div>
+      </form>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div class="container footer-inner">
+      <p>© 2025 MiPágina — Animaciones de ejemplo</p>
+    </div>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
