--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <section id="about" class="container reveal">
       <h2 class="section-title">Sobre mí</h2>
       <p>
-        Soy un estudiante de Ingeniería Industrial en la Universidad Politécnica del Estado de Morelos. 
-        Me considero una persona proactiva, meticulosa y autodidacta, con gran interés en combinar 
-        lo técnico con lo creativo. Me apasiona el diseño, la automatización y la mejora continua de procesos.
+Soy estudiante de Ingeniería Industrial en la Universidad Politécnica del Estado de Morelos, actualmente cursando el décimo cuatrimestre. A lo largo de mi formación he desarrollado un fuerte interés por la automatización de procesos, la integración de herramientas digitales y la mejora continua dentro de entornos productivos.
+Me considero una persona proactiva, meticulosa y autodidacta, con una inclinación natural por analizar, optimizar y simplificar tareas mediante el uso de la tecnología. Disfruto crear soluciones prácticas que reduzcan el trabajo repetitivo y aumenten la eficiencia, ya sea a través de macros, hojas de cálculo automatizadas, o sistemas desarrollados con lenguajes como Python o PHP.
+Mi meta es continuar especializándome en la automatización industrial y administrativa, aplicando mi creatividad e ingenio técnico para diseñar procesos más inteligentes, conectados y sostenibles que impulsen la productividad y la innovación en las empresas.
       </p>
     </section>
 
