--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@ Mi meta es continuar especializándome en la automatización industrial y admini
       <h2 class="section-title">Proyectos destacados</h2>
       <div class="projects-grid">
         <div class="project-card reveal">
-          <div class="thumb" style="background-image:url('https://picsum.photos/seed/5s/600/400')"></div>
+          <div class="thumb" style="background-image:url('2.png')"></div>
           <h4>Implementación de metodología 5S</h4>
           <p>Proyecto de mejora continua para optimizar el área de trabajo en MACETÓN®.</p>
         </div>
         <div class="project-card reveal">
-          <div class="thumb" style="background-image:url('https://picsum.photos/seed/ventas/600/400')"></div>
+          <div class="thumb" style="background-image:url('2.png')"></div>
           <h4>Pronóstico de ventas en línea</h4>
           <p>Desarrollo de modelo de pronóstico de ventas para Mercado Libre en MACETÓN®.</p>
         </div>
