--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@ Mi meta es continuar especializándome en la automatización industrial y admini
           <p>Proyecto de mejora continua para optimizar el área de trabajo en MACETÓN®.</p>
         </div>
         <div class="project-card reveal">
-          <div class="thumb" style="background-image:url('2.png')"></div>
+          <div class="thumb" style="background-image:url('4.png')"></div>
           <h4>Pronóstico de ventas en línea</h4>
           <p>Desarrollo de modelo de pronóstico de ventas para Mercado Libre en MACETÓN®.</p>
         </div>
         <div class="project-card reveal">
-          <div class="thumb" style="background-image:url('https://picsum.photos/seed/sekisui/600/400')"></div>
+          <div class="thumb" style="background-image:url('3.PNG')"></div>
           <h4>Diseño de área de almacenamiento</h4>
           <p>Diseño de almacén temporal para optimizar localización y reducir desperdicios en SEKISUI S-LEC MÉXICO.</p>
         </div>
