Add new project cards to index.html
Added new project cards for various initiatives including a form control system and a materials quarantine area.

--- a/index.html
+++ b/index.html
@@ -82,6 +82,23 @@ Mi meta es continuar especializándome en la automatización industrial y admini
           <h4>Diseño de área de almacenamiento</h4>
           <p>Diseño de almacén temporal para optimizar localización y reducir desperdicios en SEKISUI S-LEC MÉXICO.</p>
         </div>
+
+        <!-- Nuevos proyectos -->
+        <div class="project-card reveal">
+          <div class="thumb" style="background-image:url('5.png')"></div>
+          <h4>Sistema de control de formularios</h4>
+          <p>Desarrollo de una aplicación en PowerApps conectada a Microsoft Lists para automatizar registros dentro del almacén-producción.</p>
+        </div>
+        <div class="project-card reveal">
+          <div class="thumb" style="background-image:url('6.png')"></div>
+          <h4>Área de cuarentena de materiales</h4>
+          <p>Diseño del cronograma Gantt y planeación de la implementación del área de cuarentena en almacén SEKISUI S-LEC MÉXICO.</p>
+        </div>
+        <div class="project-card reveal">
+          <div class="thumb" style="background-image:url('7.png')"></div>
+          <h4>Conversión de encendido electrónico</h4>
+          <p>Conversión del sistema de encendido de un Golf MK2 a electrónico, eliminando el sistema altimétrico y mejorando la eficiencia del motor.</p>
+        </div>
       </div>
     </section>
 
