Add certificates section to index.html
Added a new section for certificates with links to PDFs.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <a href="#about">Sobre mí</a>
         <a href="#projects">Proyectos</a>
         <a href="#skills">Habilidades</a>
+        <a href="#certificates">Certificados</a>
         <a href="#contact">Contacto</a>
       </nav>
       <button id="menuToggle" class="menu-toggle" aria-expanded="false" aria-controls="nav">☰</button>
@@ -36,9 +37,9 @@
     <section id="about" class="container reveal">
       <h2 class="section-title">Sobre mí</h2>
       <p>
-Soy estudiante de Ingeniería Industrial en la Universidad Politécnica del Estado de Morelos, actualmente cursando el décimo cuatrimestre. A lo largo de mi formación he desarrollado un fuerte interés por la automatización de procesos, la integración de herramientas digitales y la mejora continua dentro de entornos productivos.
-Me considero una persona proactiva, meticulosa y autodidacta, con una inclinación natural por analizar, optimizar y simplificar tareas mediante el uso de la tecnología. Disfruto crear soluciones prácticas que reduzcan el trabajo repetitivo y aumenten la eficiencia, ya sea a través de macros, hojas de cálculo automatizadas, o sistemas desarrollados con lenguajes como Python o PHP.
-Mi meta es continuar especializándome en la automatización industrial y administrativa, aplicando mi creatividad e ingenio técnico para diseñar procesos más inteligentes, conectados y sostenibles que impulsen la productividad y la innovación en las empresas.
+        Soy estudiante de Ingeniería Industrial en la Universidad Politécnica del Estado de Morelos, actualmente cursando el décimo cuatrimestre. A lo largo de mi formación he desarrollado un fuerte interés por la automatización de procesos, la integración de herramientas digitales y la mejora continua dentro de entornos productivos.
+        Me considero una persona proactiva, meticulosa y autodidacta, con una inclinación natural por analizar, optimizar y simplificar tareas mediante el uso de la tecnología. Disfruto crear soluciones prácticas que reduzcan el trabajo repetitivo y aumenten la eficiencia, ya sea a través de macros, hojas de cálculo automatizadas, o sistemas desarrollados con lenguajes como Python o PHP.
+        Mi meta es continuar especializándome en la automatización industrial y administrativa, aplicando mi creatividad e ingenio técnico para diseñar procesos más inteligentes, conectados y sostenibles que impulsen la productividad y la innovación en las empresas.
       </p>
     </section>
 
@@ -99,6 +100,26 @@ Mi meta es continuar especializándome en la automatización industrial y admini
           <h4>Conversión de encendido electrónico</h4>
           <p>Conversión del sistema de encendido de un Golf MK2 a electrónico, eliminando el sistema altimétrico y mejorando la eficiencia del motor.</p>
         </div>
+      </div>
+    </section>
+
+    <section id="certificates" class="certificates container reveal">
+      <h2 class="section-title">Certificados</h2>
+      <p>A continuación se muestran algunos de mis certificados en PDF:</p>
+      <div class="certificates-grid">
+        <div class="certificate-card reveal">
+          <h4>Certificado de Excel Avanzado</h4>
+          <a href="certificados/excel_avanzado.pdf" target="_blank" class="btn ghost">Ver PDF</a>
+        </div>
+        <div class="certificate-card reveal">
+          <h4>Certificado de PowerApps</h4>
+          <a href="certificados/powerapps.pdf" target="_blank" class="btn ghost">Ver PDF</a>
+        </div>
+        <div class="certificate-card reveal">
+          <h4>Certificado de Mejora Continua 5S</h4>
+          <a href="certificados/5s.pdf" target="_blank" class="btn ghost">Ver PDF</a>
+        </div>
+        <!-- Puedes duplicar estos bloques para agregar más certificados -->
       </div>
     </section>
 
