Update project and certificate titles in index.html

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <!-- Nuevos proyectos -->
         <div class="project-card reveal">
           <div class="thumb" style="background-image:url('5.png')"></div>
-          <h4>Sistema de control de formularios</h4>
+          <h4>Sistema de control de formularios ADFS</h4>
           <p>Desarrollo de una aplicación en PowerApps conectada a Microsoft Lists para automatizar registros dentro del almacén-producción.</p>
         </div>
         <div class="project-card reveal">
@@ -108,15 +108,15 @@
       <p>A continuación se muestran algunos de mis certificados en PDF:</p>
       <div class="certificates-grid">
         <div class="certificate-card reveal">
-          <h4>Certificado de Excel Avanzado</h4>
+          <h4>Fundamentos de la contabilidad</h4>
           <a href="certificados/excel_avanzado.pdf" target="_blank" class="btn ghost">Ver PDF</a>
         </div>
         <div class="certificate-card reveal">
-          <h4>Certificado de PowerApps</h4>
+          <h4>Fundamentos de la gestión de proyectos</h4>
           <a href="certificados/powerapps.pdf" target="_blank" class="btn ghost">Ver PDF</a>
         </div>
         <div class="certificate-card reveal">
-          <h4>Certificado de Mejora Continua 5S</h4>
+          <h4>Fundamentos de ChatGPT</h4>
           <a href="certificados/5s.pdf" target="_blank" class="btn ghost">Ver PDF</a>
         </div>
         <!-- Puedes duplicar estos bloques para agregar más certificados -->
