Update image and certificate links in index.html

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <!-- Nuevos proyectos -->
         <div class="project-card reveal">
-          <div class="thumb" style="background-image:url('2180.png')"></div>
+          <div class="thumb" style="background-image:url('2180.jpg')"></div>
           <h4>Sistema de control de formularios ADFS</h4>
           <p>Desarrollo de una aplicación en PowerApps conectada a Microsoft Lists para automatizar registros dentro del almacén-producción.</p>
         </div>
@@ -109,15 +109,15 @@
       <div class="certificates-grid">
         <div class="certificate-card reveal">
           <h4>Fundamentos de la contabilidad</h4>
-          <a href="certificados/excel_avanzado.pdf" target="_blank" class="btn ghost">Ver PDF</a>
+          <a href="cert1.pdf" target="_blank" class="btn ghost">Ver PDF</a>
         </div>
         <div class="certificate-card reveal">
           <h4>Fundamentos de la gestión de proyectos</h4>
-          <a href="certificados/powerapps.pdf" target="_blank" class="btn ghost">Ver PDF</a>
+          <a href="cert2.pdf" target="_blank" class="btn ghost">Ver PDF</a>
         </div>
         <div class="certificate-card reveal">
           <h4>Fundamentos de ChatGPT</h4>
-          <a href="certificados/5s.pdf" target="_blank" class="btn ghost">Ver PDF</a>
+          <a href="cert3.pdf" target="_blank" class="btn ghost">Ver PDF</a>
         </div>
         <!-- Puedes duplicar estos bloques para agregar más certificados -->
       </div>
