Update hero description and skills section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section class="hero">
       <div class="container hero-inner">
         <h1 class="hero-title">Luis Daniel Bahena Zagal</h1>
-        <p class="hero-sub">Ingeniero Industrial con pasión por la tecnología, el arte y la mejora continua.</p>
+        <p class="hero-sub">Ingeniero Industrial apasionado por la eficiencia, la automatización y la integración de sistemas.</p>
         <div class="hero-cta">
           <a class="btn primary" href="#projects">Ver proyectos</a>
           <a class="btn ghost" href="#contact">Contáctame</a>
@@ -52,15 +52,19 @@
         </article>
         <article class="card reveal">
           <h3>Diseño y Modelado</h3>
-          <p>SolidWorks, AutoCAD, FreeCAD, Sweet Home 3D y OPENSCAD.</p>
+          <p>SolidWorks, AutoCAD, FreeCAD, Blender, Sweet Home 3D y OPENSCAD.</p>
         </article>
         <article class="card reveal">
           <h3>Análisis y Automatización</h3>
           <p>Excel avanzado, Power BI y automatización de procesos ofimáticos.</p>
         </article>
         <article class="card reveal">
-          <h3>Creatividad</h3>
-          <p>Amplio interés en el arte, dibujo, pintura y diseño visual.</p>
+          <h3>Aptitutes</h3>
+          <p>●	Trabajo en equipo
+●	Iniciativa
+●	Resolución de problemas
+●	Gran creatividad
+</p>
         </article>
       </div>
     </section>
