Revise project descriptions for clarity and accuracy
Updated project descriptions to clarify company involvement and changed the technology used in the ADFS project.

--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
         <div class="project-card reveal">
           <div class="thumb" style="background-image:url('2.png')"></div>
           <h4>Implementación de metodología 5S</h4>
-          <p>Proyecto de mejora continua para optimizar el área de trabajo en MACETÓN®.</p>
+          <p>Proyecto de mejora continua para optimizar el área de trabajo en la empresa MACETÓN®.</p>
         </div>
         <div class="project-card reveal">
           <div class="thumb" style="background-image:url('4.png')"></div>
           <h4>Pronóstico de ventas en línea</h4>
-          <p>Desarrollo de modelo de pronóstico de ventas para Mercado Libre en MACETÓN®.</p>
+          <p>Desarrollo de modelo de pronóstico de ventas para Mercado Libre en la empresa MACETÓN®.</p>
         </div>
         <div class="project-card reveal">
           <div class="thumb" style="background-image:url('3.PNG')"></div>
@@ -92,12 +92,12 @@
         <div class="project-card reveal">
           <div class="thumb" style="background-image:url('2180.jpg')"></div>
           <h4>Sistema de control de formularios ADFS</h4>
-          <p>Desarrollo de una aplicación en PowerApps conectada a Microsoft Lists para automatizar registros dentro del almacén-producción.</p>
+          <p>Desarrollo de una aplicación en Android Studio conectada a Firebase® para automatizar registros dentro del almacén-producción.</p>
         </div>
         <div class="project-card reveal">
-          <div class="thumb" style="background-image:url('6.png')"></div>
-          <h4>Área de cuarentena de materiales</h4>
-          <p>Diseño del cronograma Gantt y planeación de la implementación del área de cuarentena en almacén SEKISUI S-LEC MÉXICO.</p>
+          <div class="thumb" style="background-image:url('7.PNG')"></div>
+          <h4>Sistema de Gestión de Almacenes WIOMS</h4>
+          <p>Desarrollo del programa para agregar ubicaciones a productos con vista 3D dentro del almacén.</p>
         </div>
         <div class="project-card reveal">
           <div class="thumb" style="background-image:url('7.png')"></div>
