Adjust text alignment and project details in index.html
Updated paragraph alignment and modified project descriptions.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <section id="about" class="container reveal">
       <h2 class="section-title">Sobre mí</h2>
-      <p>
+      <p style="text-align: justify;">
         Soy estudiante de Ingeniería Industrial en la Universidad Politécnica del Estado de Morelos, actualmente cursando el décimo cuatrimestre. A lo largo de mi formación he desarrollado un fuerte interés por la automatización de procesos, la integración de herramientas digitales y la mejora continua dentro de entornos productivos.
         Me considero una persona proactiva, meticulosa y autodidacta, con una inclinación natural por analizar, optimizar y simplificar tareas mediante el uso de la tecnología. Disfruto crear soluciones prácticas que reduzcan el trabajo repetitivo y aumenten la eficiencia, ya sea a través de macros, hojas de cálculo automatizadas, o sistemas desarrollados con lenguajes como Python o PHP.
         Mi meta es continuar especializándome en la automatización industrial y administrativa, aplicando mi creatividad e ingenio técnico para diseñar procesos más inteligentes, conectados y sostenibles que impulsen la productividad y la innovación en las empresas.
@@ -100,9 +100,9 @@
           <p>Desarrollo del programa para agregar ubicaciones a productos con vista 3D dentro del almacén.</p>
         </div>
         <div class="project-card reveal">
-          <div class="thumb" style="background-image:url('7.png')"></div>
-          <h4>Conversión de encendido electrónico</h4>
-          <p>Conversión del sistema de encendido de un Golf MK2 a electrónico, eliminando el sistema altimétrico y mejorando la eficiencia del motor.</p>
+          <div class="thumb" style="background-image:url('14.PNG')"></div>
+          <h4>Generador de cartas de instrucciones</h4>
+          <p>Programa de apoyo para la generación de cartas de intrucciones para envíos de producto.</p>
         </div>
       </div>
     </section>
@@ -110,7 +110,7 @@
     <section id="certificates" class="certificates container reveal">
       <h2 class="section-title">Certificados</h2>
       <p>A continuación se muestran algunos de mis certificados en PDF:</p>
-      <div class="certificates-grid">
+      <center><div class="certificates-grid">
         <div class="certificate-card reveal">
           <h4>Fundamentos de la contabilidad</h4>
           <a href="cert1.pdf" target="_blank" class="btn ghost">Ver PDF</a>
@@ -122,8 +122,8 @@
         <div class="certificate-card reveal">
           <h4>Fundamentos de ChatGPT</h4>
           <a href="cert3.pdf" target="_blank" class="btn ghost">Ver PDF</a>
-        </div>
-        <!-- Puedes duplicar estos bloques para agregar más certificados -->
+        </div></center>
+¿
       </div>
     </section>
 
