--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
         <div class="project-card reveal">
           <div class="thumb" style="background-image:url('7.PNG')"></div>
           <h4>Sistema de Gestión de Almacenes WIOMS</h4>
-          <p>Desarrollo del programa para agregar ubicaciones a productos con vista 3D dentro del almacén.</p>
+          <p>Desarrollo del programa para agregar ubicaciones a productos con vista 3D dentro del almacén en SEKISUI S-LEC MÉXICO.</p>
         </div>
         <div class="project-card reveal">
           <div class="thumb" style="background-image:url('14.PNG')"></div>
           <h4>Generador de cartas de instrucciones</h4>
-          <p>Programa de apoyo para la generación de cartas de intrucciones para envíos de producto.</p>
+          <p>Programa de apoyo para la generación de cartas de intrucciones para envíos de producto en SEKISUI S-LEC MÉXICO.</p>
         </div>
       </div>
     </section>
@@ -113,17 +113,16 @@
       <center><div class="certificates-grid">
         <div class="certificate-card reveal">
           <h4>Fundamentos de la contabilidad</h4>
-          <a href="cert1.pdf" target="_blank" class="btn ghost">Ver PDF</a>
+          <a href="cert1.pdf" target="_blank" class="btn ghost" style="background: #7f070766;">Ver PDF</a>
         </div>
         <div class="certificate-card reveal">
           <h4>Fundamentos de la gestión de proyectos</h4>
-          <a href="cert2.pdf" target="_blank" class="btn ghost">Ver PDF</a>
+          <a href="cert2.pdf" target="_blank" class="btn ghost" style="background: #7f070766;">Ver PDF</a>
         </div>
         <div class="certificate-card reveal">
           <h4>Fundamentos de ChatGPT</h4>
-          <a href="cert3.pdf" target="_blank" class="btn ghost">Ver PDF</a>
+          <a href="cert3.pdf" target="_blank" class="btn ghost" style="background: #7f070766;">Ver PDF</a>
         </div></center>
-¿
       </div>
     </section>
 
